# rob6323_go2_project

./: README.md  pyproject.toml
ckpt/: baseline.pt  baseline_FrictionModel.pt  baseline_frictionModel.pt
source/rob6323_go2/rob6323_go2/tasks/direct/rob6323_go2/: __init__.py  rob6323_go2_env.py  rob6323_go2_env_cfg.py
source/rob6323_go2/rob6323_go2/tasks/direct/rob6323_go2/mdp/: terminations.py
